cloudformation/group/vpc.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "andahme/cloudformation (v0.0.4) 'vpc' deployment",


  "Parameters": {
    "Group": {
      "Type": "String",
      "Description": "Stacker Group Name",
      "AllowedPattern": "[a-z]{2,4}",
      "Default": "am"
    },

    "NetworkPrefix": {
      "Type": "String",
      "Description": "The first two octets for the network number (X.X.0.0/16)",
      "AllowedPattern": "(?:10\\.(?:[0-9]|[0-9][0-9]|[0-1][0-9][0-9]|2[0-4][0-9]|25[0-5])|172\\.(?:1[6-9]|2[0-9]|3[0-2])|192\\.168)",
      "Default": "10.10"
    }
  },


  "Metadata": {
    "AWS::CloudFormation::Interface": {
      "ParameterGroups": [
        {
          "Label": { "default": "Stacker" },
          "Parameters": [
            "Group"
          ]
        },
        {
          "Label": { "default": "Network" },
          "Parameters": [
            "NetworkPrefix"
          ]
        }
      ]
    }
  },


  "Resources": {
    "dhcp": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": {
          "Fn::Join": [ ".", [
            "aws", { "Fn::ImportValue": { "Fn::Sub": "${Group}-domain" } }
          ] ]
        },
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ],
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${Group}-dhcp-opts" } }
        ]
      }
    },

    "dhcpa": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "DhcpOptionsId": { "Ref": "dhcp" },
        "VpcId": { "Ref": "vpc" }
      }
    },

    "igw": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${Group}-vpc-igw" } }
        ]
      }
    },

    "igwa": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": { "Ref": "igw" },
        "VpcId": { "Ref": "vpc" }
      }
    },

    "sg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "VPC Security Group (default)",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${Group}-sg" } }
        ],
        "VpcId": { "Ref": "vpc" }
      }
    },

    "sghttp": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "VPC Security Group (HTTP/HTTPS)",
        "SecurityGroupIngress": [
          { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "0.0.0.0/0" },
          { "IpProtocol": "tcp", "FromPort": "443", "ToPort": "443", "CidrIp": "0.0.0.0/0" }
        ],
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${Group}-sg-http" } }
        ],
        "VpcId": { "Ref": "vpc" }
      }
    },

    "sgssh": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "VPC Security Group (SSH)",
        "SecurityGroupIngress": [
          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": "0.0.0.0/0" }
        ],
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${Group}-sg-ssh" } }
        ],
        "VpcId": { "Ref": "vpc" }
      }
    },

    "vpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": { "Fn::Sub": "${NetworkPrefix}.0.0/16" },
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${Group}-vpc" } }
        ]
      }
    },

    "zoneprivate": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "Name": {
          "Fn::Join": [ ".", [
            "aws", { "Fn::ImportValue": { "Fn::Sub": "${Group}-domain" } }
          ] ]
        },
        "VPCs": [
          {
            "VPCId": { "Ref": "vpc" },
            "VPCRegion": { "Ref": "AWS::Region" }
          }
        ]
      }
    }
  },


  "Outputs": {
    "VpcDomainPrivate": {
      "Value": {
        "Fn::Join": [ ".", [
          "aws", { "Fn::ImportValue": { "Fn::Sub": "${Group}-domain" } }
        ] ]
      },
      "Export": {
        "Name": { "Fn::Sub": "${Group}-domain-private" }
      }
    },

    "VpcHostedZoneIdPrivate": {
      "Value": { "Ref": "zoneprivate" },
      "Export": {
        "Name": { "Fn::Sub": "${Group}-zone-private" }
      }
    },

    "VpcId": {
      "Value": { "Ref": "vpc" },
      "Export": {
        "Name": { "Fn::Sub": "${Group}-vpc" }
      }
    },

    "VpcInternetGatewayId": {
      "Value": { "Ref": "igw" },
      "Export": {
        "Name": { "Fn::Sub": "${Group}-igw" }
      }
    },

    "VpcNetworkPrefix": {
      "Value": { "Ref": "NetworkPrefix" },
      "Export": {
        "Name": { "Fn::Sub": "${Group}-network-prefix" }
      }
    },

    "VpcSecurityGroupId": {
      "Value": { "Ref": "sg" },
      "Export": {
        "Name": { "Fn::Sub": "${Group}-sg" }
      }
    },

    "VpcSecurityGroupIdHttp": {
      "Value": { "Ref": "sghttp" },
      "Export": {
        "Name": { "Fn::Sub": "${Group}-sg-http" }
      }
    },

    "VpcSecurityGroupIdSsh": {
      "Value": { "Ref": "sgssh" },
      "Export": {
        "Name": { "Fn::Sub": "${Group}-sg-ssh" }
      }
    }
  }
}
